<resources>
    <string name="app_name">stringXml</string>
    <string name="valor1">Ingrese el primer valor</string>
    <string name="valor2">Ingrese el segundo valor</string>
    <string name="suma">Sumar</string>
    <string name="restar">Restar</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="nombre">Carlao</string>
</resources>